unpackaged/main/default/objects/Sales_Deep_Dive__c/Sales_Deep_Dive__c.object-meta.xml
<CustomObject>
    <label>Sales Deep Dive</label>
    <nameField>
        <displayFormat>SDD-{00000}</displayFormat>
        <label>Sales Deep Dive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Deep Dives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>