unpackaged/main/default/objects/Sales_Deep_Dive__c/fields/Additional_info_on_customer_or_business__c.field-meta.xml
<CustomField>
    <fullName>Additional_info_on_customer_or_business__c</fullName>
    <inlineHelpText>Any additional information on the Customer/Business that is relevant to the deal.</inlineHelpText>
    <label>Additional info on customer or business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>