unpackaged/main/default/objects/Sales_Deep_Dive__c/fields/Funding_Requested_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Funding_Requested_by_Customer__c</fullName>
    <inlineHelpText>The amount of funds that the customer has requested</inlineHelpText>
    <label>Funding Requested by Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>