unpackaged/main/default/objects/Sales_Deep_Dive__c/fields/KNOW_YOUR_CUSTOMER_What_do_they_do__c.field-meta.xml
<CustomField>
    <fullName>KNOW_YOUR_CUSTOMER_What_do_they_do__c</fullName>
    <inlineHelpText>Background information on the Business. This field must be 50 characters long in order to be able to save the record.</inlineHelpText>
    <label>KNOW YOUR CUSTOMER - What do they do?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>