unpackaged/main/default/objects/Sales_Deep_Dive__c/fields/What_does_the_company_need_money_for__c.field-meta.xml
<CustomField>
    <fullName>What_does_the_company_need_money_for__c</fullName>
    <inlineHelpText>Reason for the customer looking for funding.</inlineHelpText>
    <label>What does the company need money for?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>