unpackaged/main/default/objects/Sales_Deep_Dive__c/fields/When_does_the_customer_need_funds__c.field-meta.xml
<CustomField>
    <fullName>When_does_the_customer_need_funds__c</fullName>
    <label>When does the customer need funds?</label>
    <type>Date</type>
</CustomField>