unpackaged/main/default/objects/Sales_Deep_Dive__c/validationRules/Funds_Impact_Business_Not_Long_Enough.validationRule-meta.xml
<ValidationRule>
    <fullName>Funds_Impact_Business_Not_Long_Enough</fullName>
    <active>true</active>
    <description>The 'How will the funds impact the business?' field must have more than 50 characters in it</description>
    <errorConditionFormula>LEN(How_will_the_money_help_the_business__c) &lt; 50</errorConditionFormula>
    <errorDisplayField>How_will_the_money_help_the_business__c</errorDisplayField>
    <errorMessage>The description of the funds business impact must be longer.</errorMessage>
</ValidationRule>